--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,18 @@
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
 		"mediawiki/minus-x": "0.3.1",
-		"mediawiki/mediawiki-phan-config": "0.2.0"
+		"mediawiki/mediawiki-phan-config": "0.2.0",
+		"mediawiki/mediawiki-codesniffer": "18.0.0"
 	},
 	"scripts": {
 		"fix": [
-			"minus-x fix ."
+			"minus-x fix .",
+			"phpcbf"
 		],
 		"test": [
 			"parallel-lint . --exclude vendor --exclude node_modules",
-			"minus-x check ."
+			"minus-x check .",
+			"phpcs -sp"
 		]
 	}
 }
