--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"grunt": "1.0.3",
 		"grunt-banana-checker": "0.6.0",
 		"grunt-contrib-jshint": "1.1.0",
-		"grunt-jsonlint": "1.1.0"
+		"grunt-jsonlint": "1.1.0",
+		"grunt-stylelint": "0.10.1",
+		"stylelint-config-wikimedia": "0.5.0"
 	}
 }
