--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 		"test": "grunt test"
 	},
 	"devDependencies": {
+		"eslint-config-wikimedia": "0.17.0",
 		"grunt": "1.3.0",
 		"grunt-banana-checker": "0.9.0",
-		"grunt-contrib-jshint": "1.1.0",
-		"grunt-jsonlint": "1.1.0",
+		"grunt-eslint": "23.0.0",
 		"grunt-stylelint": "0.15.0",
 		"stylelint-config-wikimedia": "0.10.1"
 	}
