build: Updating stylelint-config-wikimedia to 0.14.0
The following rules are failing and were disabled:
* selector-pseudo-element-colon-notation

Change-Id: Ifdfe501bb02abaa82c4fe024e6499bc4e301a880

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
 	"extends": "stylelint-config-wikimedia",
 	"rules": {
-		"selector-max-id": null
+		"selector-max-id": null,
+		"selector-pseudo-element-colon-notation": null
 	}
 }
