stylelint: Enable selector-pseudo-element-colon-notation
Via stylelint --fix

Change-Id: If4d5adfc1fe8e8a721d010dfd8dfb7a12dbc50b2

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,6 @@
 {
 	"extends": "stylelint-config-wikimedia",
 	"rules": {
-		"selector-max-id": null,
-		"selector-pseudo-element-colon-notation": null
+		"selector-max-id": null
 	}
 }
